--- a/css/header.css
+++ b/css/header.css
@@ -4,12 +4,10 @@ header {
   width: 100%;
   margin: 0 auto;
   max-width: 1280px;
-  padding-top: 10px;
   height: 60px;
   display: flex !important;
   justify-content: space-between;
   align-items: center;
-  /* background-color: blueviolet; */
 }
 
 header .logo {
@@ -17,10 +15,6 @@ header .logo {
   width: 50%;
   height: auto;
   max-height: 32px;
-  /* margin-left: 20px; */
-}
-
-header .menu {
 }
 
 header .menu span {
@@ -33,8 +27,8 @@ header .menu span {
   cursor: pointer;
 }
 
-header .menu .click {
-  color: #19d6b4;
+.clicked {
+  color: #19d6b4 !important;
   border-bottom: 3px #00e2ba solid;
 }
 
@@ -43,6 +37,7 @@ header .menu .click {
     margin-left: 20px;
   }
 }
+
 @media (max-width: 900px) {
   header .menu {
     display: none;
@@ -60,15 +55,6 @@ header .menu .click {
   header .menu span {
     width: 100%;
     padding: 20px;
-  }
-  header .menu span:nth-last-child(1) {
-    padding: 20px 20px 40px 20px;
-  }
-  header .menu .click {
-    /* color: #333; */
-    color: #19d6b4;
-    /* background-color: #19d6b4; */
-    border-bottom: none;
   }
 
   header .mo-menu-icon {
