update 컨셉개발 페이지

--- a/css/popup.css
+++ b/css/popup.css
@@ -1,11 +1,4 @@
 /* popup */
-.pc {
-  display: block;
-}
-.mobile {
-  display: none !important;
-}
-
 .layer-popup-wrap {
   background-color: #000000a6;
   position: fixed;
@@ -19,12 +12,13 @@
   align-items: center;
   box-sizing: border-box;
   flex-wrap: wrap;
+  z-index: 30;
 }
 
 .layer-popup {
   position: relative;
   max-width: 90%;
-  overflow: scroll;
+  overflow-y: auto;
   z-index: 9999;
   height: 70vh;
 
@@ -46,13 +40,6 @@
 }
 
 @media (max-width: 768px) {
-  .pc {
-    display: none !important;
-  }
-  .mobile {
-    display: block !important;
-  }
-
   .layer-popup {
     max-width: 85%;
   }
