--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,19 @@
 header {
-  position: relative;
   top: 0;
   width: 100%;
-  margin: 0 auto;
-  max-width: 1280px;
   height: 60px;
+  position: fixed;
+  background: #fff;
+  z-index: 20;
+  display: flex !important;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1280px;
   display: flex !important;
   justify-content: space-between;
   align-items: center;
@@ -63,6 +72,7 @@ header .menu span {
     gap: 4px;
     width: 25px;
     margin-right: 20px;
+    cursor: pointer;
   }
   header .mo-menu-icon span {
     width: 100%;
