--- a/css/common.css
+++ b/css/common.css
@@ -27,9 +27,47 @@ footer,
   display: none;
 }
 
+.main-title {
+  font-family: "Cocogoose";
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 80px;
+  color: #19d6b4;
+}
+
+.sub-title {
+  font-family: "Pretendard";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 64px;
+  line-height: 80px;
+  color: #222;
+}
+
+@media (max-width: 1280px) {
+  .main-title {
+    font-size: 43px;
+    line-height: 53px;
+  }
+  .sub-title {
+    margin-top: 10px;
+    font-size: 60px;
+    line-height: 68px;
+  }
+}
+
 @media (max-width: 1024px) {
   .mo-br1024 {
     display: block;
+  }
+
+  .main-title {
+    font-size: 40px;
+    line-height: 45px;
+  }
+  .sub-title {
+    font-size: 50px;
+    line-height: 65px;
   }
 }
 
@@ -44,10 +82,29 @@ footer,
   .mo-br768 {
     display: block;
   }
+
+  .main-title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .sub-title {
+    margin-top: 5px;
+    font-size: 34px;
+    line-height: 50px;
+  }
 }
 
 @media (max-width: 480px) {
   .mo-br480 {
     display: block;
+  }
+
+  .main-title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .sub-title {
+    font-size: 28px;
+    line-height: 35px;
   }
 }
