--- a/css/reset.css
+++ b/css/reset.css
@@ -17,7 +17,7 @@ select {margin:0}
 p {margin:0;padding:0;word-break:break-all}
 hr {display:none}
 pre {overflow-x:scroll;font-size:1.1em}
-a {color:#000;text-decoration:none}
+a {color:#000;text-decoration:none !important}
 
 *, :after, :before {
   -webkit-box-sizing:border-box;
