--- a/css/popup.css
+++ b/css/popup.css
@@ -7,7 +7,7 @@
   left: 0;
   height: 100vh;
   max-height: 100%;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
