--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 header {
   top: 0;
   width: 100%;
-  height: 60px;
+  height: 80px;
   position: fixed;
   background: #fff;
   z-index: 20;
@@ -32,7 +32,8 @@ header .menu span {
   font-size: 16px;
   line-height: 19px;
   color: #333333;
-  padding: 20px 20px 17px;
+  padding: 30px 20px 27px;
+  /* padding: 20px 20px 17px; */
   cursor: pointer;
 }
 
