--- a/css/orders.css
+++ b/css/orders.css
@@ -146,7 +146,7 @@
   width: 90%;
   height: 70vh;
   background: #fff;
-
+  overflow-x: hidden;
   padding: 50px 20px;
 }
 #order-popup .layer-popup .order-data {
@@ -165,6 +165,10 @@
   border-left: none;
 }
 
+#order-popup .layer-popup .order-data li {
+  display: list-item !important;
+}
+#order-popup .layer-popup .order-data li,
 #order-popup .layer-popup .order-data p {
   font-weight: 500;
   font-size: 16px;
@@ -265,7 +269,7 @@
   #orders-page .order-data-box .order-regdate-box .num-regdate {
     width: 73%;
   }
-
+  #order-popup .layer-popup .order-data li,
   #order-popup .layer-popup .order-data p {
     font-size: 14px;
     line-height: 20px;
@@ -274,5 +278,4 @@
     font-size: 17px;
     line-height: 19px;
   }
-
 }
