--- a/css/concept-detail.css
+++ b/css/concept-detail.css
@@ -49,6 +49,7 @@
   width: calc(50% - 40px);
   height: 300px;
   background-color: transparent;
+  position: relative;
 }
 
 #concept-detail .result-box .result-wrap .mark {
